# MixSaT

./: .gitignore  MAE.py  README.md  dataLoading.py  dataset.py  experiment.py  experiment_finetune.py  freegpu.py  loss.py  main.py  model.py  model_twins_1d.py  model_twins_1d_LoGlo.py  model_twins_1d_LoGlo_SE.py  model_twins_1d_SE.py  model_twins_1d_group.py  model_twins_1d_group_LoGlo.py  model_twins_1d_group_LoGlo_SE.py  model_twins_1d_group_SE.py  model_twins_1d_group_SE_BP.py  model_twins_original.py  process_results.py  pyproject.toml  result_visuallizer.py  results_json2csv.py  scheduler.py  shell.py  test.py  train.py  training.py
cfg/: test.toml  train.toml
src/dataloading/: data_loading.py  dataset.py
src/research/: callbacks.py  loss.py  training.py
src/trivial/: copy_soccernet_data.py
src/utils/: common.py  parseAction.py  utils.py
wandb/: latest-run
wandb/run-20220712_141045-1s1elo9g/: run-1s1elo9g.wandb
wandb/run-20220712_141045-1s1elo9g/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220712_141045-1s1elo9g/files/code/: main.py
wandb/run-20220712_141110-1yksjw8s/: run-1yksjw8s.wandb
wandb/run-20220712_141110-1yksjw8s/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
wandb/run-20220712_143148-30m31jpv/: run-30m31jpv.wandb
wandb/run-20220712_143148-30m31jpv/files/: config.yaml  wandb-metadata.json  wandb-summary.json
