[project]
name = "mixsat-venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12" # Use range instead of exact version
dependencies = [
    "pytorch-lightning", # Specify version compatible with torch<=2.4
    "torch>=2.1,<=2.4", # Constrain torch version
    "numpy",
    "SoccerNet==0.1.62",
    "scikit-learn",
    "einops",
    "huggingface-hub==0.20.3",
    "wandb>=0.20.1",
    "rich>=14.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
